--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
 <h2>Cats that are not sleepy!</h2>
 
 <ul>
-  {{#each cats}}
+  {{#each burgers}}
     {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
+      {{!-- {{> cats/cat-block sleep=true}} --}}
     {{/unless}}
   {{/each}}
 </ul>
