--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,16 @@
-<h1>Cats!</h1>
+<h1>BURGERS</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>Eat da Burger</h2>
 
 <ul>
-  {{#each burgers}}
+  {{#each cats}}
     {{#unless sleepy}}
       {{!-- {{> cats/cat-block sleep=true}} --}}
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Devour The burger</h2>
 
 <ul>
   {{#each cats}}
@@ -20,19 +20,19 @@
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>Add a Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Cat Name:</label>
+    <label for="ca">Burger name: </label>
     <input type="text" id="ca" name="name">
   </div>
 
   <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
+    <label for="slee">Devoured?</label><br>
+    <input type="radio" name="sleepy" value="1" checked> Devoured<br>
+    <input type="radio" name="sleepy" value="0"> not devoured
   </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add the Burger</button>
 </form>
