--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,10 +29,10 @@
   </div>
 
   <div class="form-group">
-    <label for="slee">Devoured?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Devoured<br>
-    <input type="radio" name="sleepy" value="0"> not devoured
+    <label for="slee">Devoi</label><br>
+    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
+    <input type="radio" name="sleepy" value="0"> Awake
   </div>
 
-  <button type="submit">Add the Burger</button>
+  <button type="submit">Add Cat</button>
 </form>
